data/derived/sp14/progs/unify/prog1420.ml.out
Characters 155-156:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         string list
